<resources>
    <string name="app_name">StressApp</string>
    <string name="sources">Источники стресса</string>
    <string name="day_schedule">Разметка дня</string>
    <string name="input_source">Введите источник</string>
    <string name="add">Добавить</string>
    <string name="title">title</string>
    <string name="time">Время</string>
    <string name="default_time">00:00</string>
    <string name="phase_item_title">Количество пиков</string>
    <string name="default_value">value</string>
    <string name="save_button_text">Сохранить</string>
    <string name="markup_is_ok">Все записи размечены</string>
    <string name="swap_item">swap_item</string>
    <string name="statistic_icon">statistic_icon</string>
    <string name="default_title">title</string>
    <string name="color_marker">color_marker</string>
    <string name="current_value_title">Текущее\nзначение</string>
    <string name="average_value_title">Среднее\nзначение</string>
    <string name="device_name_title">Имя устройства:</string>
    <string name="watch_icon">watch_icon</string>
    <string name="mac_address_title">MAC:</string>
    <string name="event_title">Событие</string>
    <string name="time_interval_default">8:00 – 12:00</string>
    <string name="delete_icon">delete_icon</string>
    <string name="default_date">dd.MM.yyyy</string>
</resources>