<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gadget_item"
            android:src="@drawable/ic_watch_item"
            android:layout_marginEnd="@dimen/default_indent"
            android:contentDescription="@string/watch_icon" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_name_title"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginEnd="@dimen/small_indent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_device"
                    android:textStyle="bold"
                    android:textSize="@dimen/default_text_size"/>
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mac_address_title"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginEnd="@dimen/small_indent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mac_device"
                    android:textSize="@dimen/default_text_size"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
