<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shadow"
    android:padding="@dimen/default_indent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_anchor="@+id/constraintLayout3"
            app:layout_anchorGravity="center">

            <com.neurotech.stressapp.ui.customview.ScaleView
                android:id="@+id/scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scale"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/current_value_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/current_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_value"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_indent"
                    android:text="@string/average_value_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/avg_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_value"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/time_range_tonic"
            android:layout_width="@dimen/range_size"
            android:layout_height="@dimen/range_size"
            android:gravity="end|bottom"
            android:layout_gravity="end|bottom"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:layout_marginEnd="@dimen/half_small_indent"
            android:layout_marginBottom="@dimen/half_small_indent"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>