<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_indent"
    android:background="@drawable/markup_background">

    <TextView
        android:id="@+id/timeStatisticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_indent"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/default_text_size"
        android:text="@string/default_time"
        app:layout_constraintBottom_toTopOf="@+id/dateStatisticTextView"
        app:layout_constraintEnd_toEndOf="@+id/dateStatisticTextView"
        app:layout_constraintStart_toStartOf="@+id/dateStatisticTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateStatisticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_indent"
        android:layout_marginBottom="@dimen/small_indent"
        android:text="@string/default_date"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeStatisticTextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_indent"
        android:text="Количество пиков:"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/dateStatisticTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_indent"
        android:text="Средняя тоника:"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/peakCountStatisticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_indent"
        android:text="100"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/avgTonicStatisticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0000"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/peakCountStatisticTextView"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/colorLayoutStatisticTextView"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_indent"
        android:background="@color/green_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sourceStatisticTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textStyle="bold"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>